fixed word wrap on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -17,6 +17,7 @@ body {
     background-color: #02010a;
     border: 1px solid #191820;
     word-wrap: break-word;
+    word-break: break-all;
 }
 
 main {
